# zhiz-llm-rag

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  1  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  answer_cli.py  build_chroma_index.py  build_profile_schemeB.json  capture_answer_cli_env.ps1  check_chroma_build.py  check_llm_http.py  check_rag_pipeline.py  embeddings_bge_m3.py  extract_units.py  llm_client_http.py  make_inventory.py  md_refs.py  prompt_rag.py  pyproject.toml  query_cli.py  questions_v0.jsonl  rag_config.py  reference.yaml  requirements-ci.txt  requirements_rag_min.txt  retriever_chroma.py  run_schemeB_full.cmd  run_schemeB_full.ps1  status_fix_db_build_stamp.patch  (+2 more)
.github/: pull_request_template.md
docs/: INDEX.md  OPERATION_GUIDE.md  PACKAGED_USAGE_GUIDE.md  README.md  REFERENCE.md  STAGE_PLAN.md  TROUBLESHOOTING.md  old_postmortem_prompt_template.md  report_output_upgrade_progress.md
policy/: README.md  ci_workflow.rego  reference.rego
schemas/: build_report_v1.schema.json  build_report_v2.schema.json  gate_report_v1.schema.json  gate_report_v2.schema.json
tests/: rag_queries_v1.json  test_build_chroma_stage_resume.py  test_check_readme_code_sync_write.py  test_ci_mini_pipeline.py
tools/: CHECK_CLI_ENTRYPOINTS.md  README.md  USAGE_public_release_audit.md  audit_baseline_tools.py  audit_baseline_tools_README.md  build_chroma_index_flagembedding.py  build_chroma_index_flagembedding_README.md  capture_rag_env.py  capture_rag_env_README.md  check_all.py  check_all_README.md  check_chroma_build_README.md  check_chroma_coverage_vs_units.py  check_chroma_coverage_vs_units_README.md  check_chroma_embeddings_sample.py  check_chroma_embeddings_sample_README.md  check_cli_entrypoints.py  check_doc_system_gate.py  check_doc_system_gate_README.md  check_docs_conventions.py  check_docs_conventions_README.md  check_exit_code_contract.py  check_exit_code_contract_README.md  check_inventory_build.py  check_inventory_build_README.md  check_md_refs_contract.py  check_md_refs_contract_README.md  check_mypy.py  check_mypy_README.md  check_public_release_hygiene.py  check_public_release_hygiene_README.md  check_pyproject_preflight.py  check_pyproject_preflight_README.md  check_readme_code_sync.py  check_readme_code_sync_README.md  check_repo_health_files.py  check_repo_health_files_README.md  check_report_tools_contract.py  check_report_tools_contract_README.md  (+100 more)
(+164 files in other folders)
